# swiss-immigration-pro

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  7_DAY_CHECKLIST.md  AGENTS.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  DEV_SYNC_GUIDE.md  EXECUTIVE_SUMMARY.md  FILE_INDEX.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_ROADMAP.md  INDEX.md  KEY_NUMBERS.md  LAUNCH_GUIDE.md  LAYOUT_PAGE_REVENUE_IDEAS.md  MARKETING_PLAN_2026.md  MOBILE_ENHANCEMENT_SUMMARY.md  MOBILE_SETUP_GUIDE.md  Makefile  QUICK_REFERENCE.md  README.md  REVENUE_PLAN_README.md  VIDEO_ADS_SCRIPTS.md  cloudflare-setup.sh  docker-compose.override.yml  docker-compose.yml  fix-npm-conflict.sh  pyrightconfig.json  setup-remote-access.sh  setup-ssl.sh  sync-dev.sh  tunnel-verify.sh  verify.sh
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  pyrightconfig.json  requirements-ml.txt  requirements.txt
backend/app/: celery_app.py  cli.py  config.py  database.py  main.py  redis_pool.py  schemas.py
backend/app/middleware/: auth.py  paywall.py  rate_limit.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: add_marketing_captures.py
backend/app/models/: __init__.py  company.py  content.py  lawyer.py  marketplace.py  subscription.py  user.py
backend/app/routers/: admin.py  apartments.py  auth.py  chatbot.py  consultations.py  contact.py  cv.py  lawyer.py  marketing.py  modules.py  newsletter.py  payments.py  quiz.py  referrals.py  search.py  stats.py  translate.py  user.py  webhooks.py
backend/app/routers/b2b/: __init__.py  billing.py  companies.py  compliance.py  employees.py  reports.py
backend/app/services/: ai_service.py  auth_service.py  compliance_service.py  document_processor.py  drip_emails.py  email_service.py  lawyer_service.py  rag.py  sip_ai_knowledge.py  stripe_service.py
backend/app/tasks/: compliance.py  email.py  quiz_drip_emails.py
backend/tests/: conftest.py  test_admin.py  test_apartments.py  test_auth.py  test_b2b_billing.py  test_chatbot.py  test_chatbot_extended.py  test_consultations.py  test_cv.py  test_health.py  test_marketing.py  test_modules.py  test_newsletter.py  test_payments.py  test_referrals.py  test_search.py  test_translate.py  test_user.py  test_webhooks.py
voiceengine/: .env.example  Dockerfile  pyproject.toml  voice_server.py
voiceengine/src/voice_engine/: config.py
(+409 files in other folders)
