[project]
name = "sip-backend"
version = "1.0.0"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["app"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "T20",   # flake8-print (catch stray print statements)
    "RET",   # flake8-return
    "ARG",   # flake8-unused-arguments
    "S",     # flake8-bandit (security)
    "ASYNC", # flake8-async
]
ignore = [
    "S101",  # assert usage allowed in tests
    "B008",  # function calls in default args (needed for FastAPI Depends)
    "ARG001", # unused function argument (common in route handlers with DI)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG001", "ARG002"]
"app/routers/**/*.py" = ["ARG001"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring external services (DB, Redis)",
    "slow: marks tests that take >5s",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
