[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sip-voice-engine"
version = "1.0.0"
description = "Voice conversation engine for Swiss Immigration Pro (Groq STT + Edge TTS)"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    # Core
    "numpy>=1.26.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "soundfile>=0.12.1",
    # Cloud providers (no local models — keep image small)
    "groq>=0.11.0",
    "edge-tts>=7.0.0",
    # Server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "starlette>=0.41.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/voice_engine"]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "A", "SIM"]
ignore = ["ANN101", "ANN102", "ANN401"]
